k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mechamind-backend-svc
spec:
  selector:
    app: mechamind-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
